# workhorse

./: .dockerignore  .gitignore  .umirc.ts  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  project.md  restart_all.bat  server.js  start_all.bat  stop_all.bat  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.js
docs/: acp_integration_plan.md  agent_task_spec.md  architecture.md  cw_evolution_spec.md  cw_upgrade_spec.md  evolution.md  migration_results.md  observability_spec.md  openclaw_agent_spec.md  project.md  test.md  testing_guide.md
public/: 335.async.js  390.async.js  414.async.js  754.async.js  787.async.js  956.async.js  p__Chat__index.async.js  p__Chat__index.chunk.css  p__Login__index.async.js  preload_helper.js  t__plugin-layout__Layout.async.js  umi.css  umi.js
scripts/: build-dmg.mjs  build-sidecar-optimized.mjs  build-sidecar.mjs  build-tauri.mjs  verify-runtime-lifecycle.mjs
server/: app.js
src/: App.tsx  app.tsx  global.css  typings.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
tests/: acp-agent-manager.test.js  agent-engine-acp.test.js  agent-tasks-routes.test.js  auth-endpoints.test.js  channel-webhooks-dingtalk.test.js  conversations-agent-routing.test.js  conversations-regenerate.test.js  conversations-tools.test.js  cron-runner.test.js  database-models.test.js  db-client.test.js  endpoints-config-routes.test.js  install-share-routes.test.js  install-share-utils.test.js  mcp-manager-shell.test.js  mcp-quickstart-routes.test.js  request-utils.test.ts  (+9 more)
(+111 files in other folders)
