[package]
name = "app"
version = "2.0.1"
description = "Workhorse desktop shell with local Node sidecar"
authors = ["CW Contributors"]
license = ""
repository = "https://github.com/TimothyZhang023/workhorse.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2"
